--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "expo": "~52.0.8",
+    "expo-file-system": "^18.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-simple-openvpn": "^2.1.3"
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-simple-openvpn": "^2.1.3",
+    "react-native-simple-radio-button": "^2.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
