--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-simple-openvpn": "^2.1.3",
-    "react-native-simple-radio-button": "^2.7.4"
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg": "^15.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
