--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "~52.0.8",
+    "expo-blur": "~14.0.1",
     "expo-file-system": "^18.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
